--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,9 +4,9 @@ version = "1.2.7"
 edition = "2021"
 license = "Apache-2.0"
 description = "Meta Secret core module"
-homepage = "https://github.com/meta-secret/meta-secret-node/tree/main/core"
-documentation = "https://github.com/meta-secret/meta-secret-node/blob/main/core/README.md"
-repository = "https://github.com/meta-secret/meta-secret-node/blob/main/core/README.md"
+homepage = "https://github.com/meta-secret/meta-secret-core"
+documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
+repository = "https://github.com/meta-secret/meta-secret-core"
 readme = "README.md"
 
 [lib]
