--- a/core-swift-lib/Cargo.toml
+++ b/core-swift-lib/Cargo.toml
@@ -15,3 +15,5 @@ serde = { version = "1.0", features = ["derive"] }
 ed25519-dalek = "1.0"
 crypto_box = "0.8.1"
 base64 = "0.20.0-alpha.1"
+sha2 = "0.10.6"
+hex = "0.4"
