--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "meta-secret-core"
-version = "1.3.3"
+version = "1.4.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "Meta Secret core module"
@@ -19,6 +19,9 @@ thiserror = "1.0.37"
 ed25519-dalek = "1.0.1"
 crypto_box = "0.8.2"
 rand = "0.7.3"
+sha2 = "0.10.6"
+
+hex = "0.4"
 
 #https://github.com/dsprenkels/sss-rs
 shamirsecretsharing = "0.1"
