--- a/core-swift-lib/Cargo.toml
+++ b/core-swift-lib/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "lib", "staticlib"]
 name = "meta_secret_core_swift"
 
 [dependencies]
-#meta-secret-core = "1.2.6"
+#meta-secret-core = "1.7.0"
 meta-secret-core = { path = "../core"} # Development mode
 serde_json = "1.0.87"
 serde = { version = "1.0", features = ["derive"] }
@@ -17,3 +17,4 @@ crypto_box = "0.8.1"
 base64 = "0.20.0-alpha.1"
 sha2 = "0.10.6"
 hex = "0.4"
+anyhow = "1.0.66"
