--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,6 +17,11 @@ name = "meta_secret_core"
 thiserror = "1.0.37"
 anyhow = "1.0.66"
 
+reqwest = { version = "0.11.13", features = ["json"]}
+tokio = { version = "1.23.0", features = ["full"] }
+
+async-std = { version = "1.12.0", features = ["attributes"] }
+
 ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.7.3"
