--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "meta-secret-core"
-version = "1.7.1"
+version = "1.8.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "Meta Secret core module"
@@ -18,13 +18,12 @@ thiserror = "1.0.37"
 anyhow = "1.0.66"
 
 reqwest = { version = "0.11.13", features = ["json"]}
-tokio = { version = "1.23.0", features = ["full"] }
-
-async-std = { version = "1.12.0", features = ["attributes"] }
+async-std = { version = "1.12.0" }
 
 ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
-rand = "0.7.3"
+rand = "0.8.5"
+getrandom = { version = "0.2.8", features = ["js"] }
 sha2 = "0.10.6"
 
 hex = "0.4"
