--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "meta-secret-core"
-version = "1.8.1"
+version = "1.9.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "Meta Secret core module"
@@ -14,10 +14,12 @@ crate-type = ["cdylib", "lib", "staticlib"]
 name = "meta_secret_core"
 
 [dependencies]
+meta-secret-core-models = { path = "../rust-models" }
+
 thiserror = "1.0.37"
 anyhow = "1.0.66"
 
-reqwest = { version = "0.11.13", features = ["json"]}
+reqwest = { version = "0.11.13", features = ["json"] }
 async-std = { version = "1.12.0" }
 
 ed25519-dalek = "1.0.1"
@@ -36,7 +38,7 @@ serde_json = "1.0"
 serde_bytes = "0.11"
 serde-big-array = "0.4"
 
-base64 = "0.20.0-alpha.1"
+base64 = "0.20.0"
 
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
