Finishing migration to openapi schema generation

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -25,6 +25,14 @@ jobs:
             core/target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Publish models
+        working-directory: rust-models
+        run: |
+          cargo test
+          cargo publish --token ${CRATES_TOKEN}
+        env:
+          CRATES_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
+
       - name: Publish core
         working-directory: core
         run: |
