--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,7 +14,6 @@ crate-type = ["cdylib", "lib", "staticlib"]
 name = "meta_secret_core"
 
 [dependencies]
-meta-secret-core-models = { version = "0.1.0", path = "../rust-models" }
 
 thiserror = "1.0.37"
 anyhow = "1.0.66"
@@ -27,6 +26,7 @@ crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.8", features = ["js"] }
 sha2 = "0.10.6"
+base64 = "0.20.0"
 
 hex = "0.4"
 
@@ -37,8 +37,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_bytes = "0.11"
 serde-big-array = "0.4"
-
-base64 = "0.20.0"
+serde_derive = "^1.0"
 
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
