--- a/schema/Makefile
+++ b/schema/Makefile
@@ -6,10 +6,13 @@ clean_core:
 	rm -rf ../core/src/models/
 
 generate_schema:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/local \
+		-u 1000:1000 \
+		openapitools/openapi-generator-cli:v6.2.1 generate \
+		-i /local/schema.yaml \
 		-g rust \
-		-o ./target/rust-models \
+		-o /local/target/rust-models \
 		--package-name meta-secret-core-models \
 		--skip-validate-spec
 
@@ -17,19 +20,25 @@ generate_schema:
 	#cp -r ./target/rust-models/docs ../core/src/models/
 
 generate_schema_swift:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/local \
+		-u 1000:1000 \
+		openapitools/openapi-generator-cli:v6.2.1 generate \
+		-i /local/schema.yaml \
 		-g swift5 \
-		-o ./target/swift-models \
+		-o /local/target/swift-models \
 		--package-name meta-secret-core-models \
 		--skip-validate-spec
 
 #--global-property models
 generate_schema_type_script:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/local \
+		-u 1000:1000 \
+		openapitools/openapi-generator-cli:v6.2.1 generate \
+		-i /local/schema.yaml \
 		-g typescript-jquery \
-		-o ./target/core-models-ts \
+		-o /local/target/core-models-ts \
 		--package-name meta-secret-core-models \
 		--additional-properties=supportsES6=true,typescriptThreePlus=true \
 		--skip-validate-spec
