--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ core/target
 schema/target
 /schema/openapitools.json
 /Cargo.lock
+/schema/node_modules/
+/schema/package.json
+/schema/package-lock.json
