--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Generate rust models
         working-directory: schema
         run: |
-          npm install @openapitools/openapi-generator-cli
+          npm install @openapitools/openapi-generator-cli -g
           openapi-generator-cli version-manager set 6.2.1
           make clean generate_schema
 
