--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,6 +18,8 @@ name = "meta_secret_core"
 thiserror = "1.0.37"
 anyhow = "1.0.66"
 
+async-trait = "0.1"
+
 reqwest = { version = "0.11.13", features = ["json"] }
 async-std = { version = "1.12.0" }
 
