--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "meta-secret-core"
-version = "1.10.8"
+version = "1.11.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "Meta Secret core module"
@@ -27,7 +27,7 @@ ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.8", features = ["js"] }
-sha2 = "0.10.6"
+sha2 = { version = "0.10.6", features = ["oid"]}
 base64 = "0.20.0"
 
 hex = "0.4"
