--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -44,3 +44,11 @@ serde_derive = "^1.0"
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
 image = "0.24"
+
+[dependencies.uuid]
+version = "1.3.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
