--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -41,6 +41,8 @@ serde_bytes = "0.11"
 serde-big-array = "0.4"
 serde_derive = "^1.0"
 
+rocksdb = "^0.20"
+
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
 image = "0.24"
