--- a/.github/workflows/core.deploy.yml
+++ b/.github/workflows/core.deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           path: |
             ~/.cargo
-            core/target
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Generate rust models
