--- a/.github/workflows/core.test.yml
+++ b/.github/workflows/core.test.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           path: |
             ~/.cargo
-            core/target
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Generate rust models
