v2: make app work and bring embedded db:  - change project structure, add: mock server and integration tests.  - migrate from rocksdb to sqlite. Rocksdb build is super slow and also, sqlite will be used in the mobile app  - fix app test: fix accept_join function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
 members = [
     "core",
-    "core-swift-lib"
+    "meta-server-emulator",
+    "meta-test",
+    "core-swift-lib",
 ]
