v2, sqlite mock server:  - initial implementation of the mock server  - sql migration scripts  - unit test for the mock server and embedded migrations

--- a/meta-server-emulator/Cargo.toml
+++ b/meta-server-emulator/Cargo.toml
@@ -8,7 +8,8 @@ meta-secret-core = { path = "../core" }
 
 thiserror = "1.0.40"
 
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+diesel = { version = "2.0.0", features = ["sqlite"] }
+diesel_migrations = "2.0.0"
 
 async-trait = "0.1"
 
