--- a/meta-test/Cargo.toml
+++ b/meta-test/Cargo.toml
@@ -3,11 +3,12 @@ name = "meta-test"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 meta-secret-core = { path = "../core" }
 meta-server-emulator = { path = "../meta-server-emulator" }
+
+diesel = { version = "2.0.0", features = ["sqlite"] }
+diesel_migrations = "2.0.0"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
