v2:  - bring "wasm" module from meta-secret-node repo, for faster development and to reduce complexity of the architecture of a multi repo project.  - implement "send" command in the worker

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ schema/target
 /meta-server-serverless/Cargo.lock
 /meta-server-serverless/package-lock.json
 /meta-server-serverless/target
+
+/wasm/target
+/wasm/pkg
+/wasm/**/*.rs.bk
+/wasm/Cargo.lock
+/wasm/bin/
+/wasm/wasm-pack.log
