--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -52,3 +52,7 @@ features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
+
+
+[dev-dependencies]
+tokio = { version = "1.20.1", features = ["macros"] }
