--- a/meta-test/Cargo.toml
+++ b/meta-test/Cargo.toml
@@ -13,5 +13,9 @@ diesel_migrations = "2.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+async-trait = "0.1"
+anyhow = "1.0"
+thiserror = "1.0"
+
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["macros"] }
