--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -25,6 +25,8 @@ serde_json = "1.0.96"
 serde-wasm-bindgen = "0.5.0"
 wasm-bindgen-futures = "0.4.37"
 
+async-std = { version = "1.12.0" }
+
 js-sys = { version = "0.3.63" }
 web-sys = { version = "0.3.60", features = [
     "DomException",
@@ -33,6 +35,8 @@ web-sys = { version = "0.3.60", features = [
     "StorageType",
     "Window"
 ] }
+
+async-mutex = "1.4.0"
 
 getrandom = { version = "0.2.8", features = ["js"] }
 
