--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -13,6 +13,11 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 
+gloo-timers = "0.2.6"
+
+async-std = { version="1.12.0", features = ["wasm-bindgen-futures", "futures-channel"] }
+flume = "0.10.14"
+
 async-trait = "0.1"
 anyhow = "1.0"
 thiserror = "1.0"
@@ -24,8 +29,6 @@ serde_json = "1.0.96"
 
 serde-wasm-bindgen = "0.5.0"
 wasm-bindgen-futures = "0.4.37"
-
-async-std = { version = "1.12.0" }
 
 js-sys = { version = "0.3.63" }
 web-sys = { version = "0.3.60", features = [
