--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "1.0.40"
 anyhow = "1.0.66"
 
 async-trait = "0.1"
+flume = "0.10.14"
 
 reqwest = { version = "0.11.13", features = ["json"] }
 async-std = { version = "1.12.0" }
@@ -27,7 +28,7 @@ ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.8", features = ["js"] }
-sha2 = { version = "0.10.6", features = ["oid"]}
+sha2 = { version = "0.10.6", features = ["oid"] }
 base64 = "0.20.0"
 
 hex = "0.4"
@@ -48,8 +49,8 @@ image = "0.24"
 [dependencies.uuid]
 version = "1.3.0"
 features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "v4", # Lets you generate random UUIDs
+    "fast-rng", # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
 
