--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,8 +11,9 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-log = "0.4.19"
-wasm-logger = "0.2.0"
+
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 
