--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,6 +11,10 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 
 gloo-timers = "0.2.6"
