v2:  - code refactoring  - move business code from the wasm module to the core module  - fighting against mutable state
 part 3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ members = [
     "meta-server-emulator",
     "meta-test",
     "core-swift-lib",
+    "wasm"
 ]
 
 exclude = [
-    "meta-server-serverless",
-    "wasm"
+    "meta-server-serverless"
 ]
