--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [workspace]
+
+resolver = "2"
+
 members = [
     "core",
     "meta-server-emulator",
     "meta-test",
     "core-swift-lib",
+    "wasm"
 ]
 
 exclude = [
-    "meta-server-serverless",
-    "wasm"
+    "meta-server-serverless"
 ]
