--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -9,13 +9,16 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook"]
+wasm-bindgen = [ "instant/wasm-bindgen" ]
 
 [dependencies]
-
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
+
+indexed_db_futures = "0.3.0"
+instant = "0.1.12"
 
 gloo-timers = "0.2.6"
 
