v2, refactoring:  - cargo fmt code reformat  - openapi schema generator - migrate to docker

--- a/schema/Makefile
+++ b/schema/Makefile
@@ -6,10 +6,11 @@ clean_core:
 	rm -rf ../core/src/models/
 
 generate_schema:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/openapi openapitools/openapi-generator-cli:v7.0.0 generate \
+		-i /openapi/schema.yaml \
 		-g rust \
-		-o ./target/rust-models \
+		-o /openapi/target/rust-models \
 		--package-name meta-secret-core-models \
 		--skip-validate-spec
 
@@ -17,19 +18,21 @@ generate_schema:
 	#cp -r ./target/rust-models/docs ../core/src/models/
 
 generate_schema_swift:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/openapi openapitools/openapi-generator-cli:v7.0.0 generate \
+		-i /openapi/schema.yaml \
 		-g swift5 \
-		-o ./target/swift-models \
+		-o /openapi/target/swift-models \
 		--package-name meta-secret-core-models \
 		--skip-validate-spec
 
 #--global-property models
 generate_schema_type_script:
-	openapi-generator-cli generate \
-		-i schema.yaml \
+	docker run --rm \
+		-v ${PWD}:/openapi openapitools/openapi-generator-cli:v7.0.0 generate \
+		-i /openapi/schema.yaml \
 		-g typescript-jquery \
-		-o ./target/core-models-ts \
+		-o /openapi/target/core-models-ts \
 		--package-name meta-secret-core-models \
 		--additional-properties=supportsES6=true,typescriptThreePlus=true \
 		--skip-validate-spec
