--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -18,7 +18,7 @@ tracing-subscriber = "0.3.17"
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 
 indexed_db_futures = "0.3.0"
-instant = "0.1.12"
+instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
 
 gloo-timers = "0.2.6"
 
