--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,17 +14,21 @@ crate-type = ["cdylib", "lib", "staticlib"]
 name = "meta_secret_core"
 
 [dependencies]
+chrono = "0.4.31"
 
 thiserror = "1.0.40"
 anyhow = "1.0.66"
 
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+
 async-mutex = "1.4.0"
 
 async-trait = "0.1"
-flume = "0.10.14"
+flume = "0.11.0"
 
 reqwest = { version = "0.11.13", features = ["json"] }
-async-std = { version = "1.12.0" }
+async-std = { version = "1.12.0", features = ["unstable"] }
 
 ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
@@ -47,6 +51,7 @@ serde_derive = "^1.0"
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
 image = "0.24"
+log = "0.4.20"
 
 [dependencies.uuid]
 version = "1.3.0"
