--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,8 +19,8 @@ chrono = "0.4.31"
 thiserror = "1.0.40"
 anyhow = "1.0.66"
 
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing = {version = "0.1.37"  }
+tracing-subscriber = {version = "0.3.17", features = ["json"]}
 
 async-mutex = "1.4.0"
 
