--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,7 +20,7 @@ thiserror = "1.0.40"
 anyhow = "1.0.66"
 
 tracing = {version = "0.1.37"  }
-tracing-subscriber = {version = "0.3.17", features = ["json"]}
+tracing-subscriber = {version = "0.3.17", features = ["json", "env-filter"]}
 
 async-mutex = "1.4.0"
 
