--- a/core-swift-lib/Cargo.toml
+++ b/core-swift-lib/Cargo.toml
@@ -9,11 +9,15 @@ name = "meta_secret_core_swift"
 
 [dependencies]
 meta-secret-core = { path = "../core"}
-serde_json = "1.0.87"
-serde = { version = "1.0", features = ["derive"] }
-ed25519-dalek = "1.0"
-crypto_box = "0.8.1"
-base64 = "0.20.0-alpha.1"
-sha2 = "0.10.6"
-hex = "0.4"
-anyhow = "1.0.66"
+
+anyhow.workspace = true
+
+serde.workspace = true
+serde_json.workspace = true
+serde_derive.workspace = true
+
+ed25519-dalek.workspace = true
+crypto_box.workspace = true
+base64.workspace = true
+sha2.workspace = true
+hex.workspace = true
