--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "meta-secret-web-cli"
+name = "meta-secret-wasm"
 version = "0.1.0"
-authors = ["metabynull <bynull@metaelon.space>"]
+authors = ["cypherkitty <bynull@meta-secret.org>"]
 edition = "2018"
 
 [lib]
@@ -11,29 +11,31 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "time"] }
+meta-secret-core = { path = "../core" }
+
+anyhow.workspace = true
+thiserror.workspace = true
+
+async-trait.workspace = true
+flume.workspace = true
+async-mutex.workspace = true
+
+serde.workspace = true
+serde_json.workspace = true
+serde_derive.workspace = true
+
+tracing.workspace = true
+tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "time"] }
+
+getrandom.workspace = true
+
+# Wasm dependencies
 tracing-web = "0.1.2"
 
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
-
 indexed_db_futures = "0.3.0"
 
-gloo-timers = "0.2.6"
-
-async-std = { version = "1.12.0", features = ["wasm-bindgen-futures", "futures-channel"] }
-flume = "0.10.14"
-
-async-trait = "0.1"
-anyhow = "1.0"
-thiserror = "1.0"
-
-meta-secret-core = { path = "../core" }
-
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
-
-serde-wasm-bindgen = "0.5.0"
+serde-wasm-bindgen = "0.6.0"
 wasm-bindgen-futures = "0.4.37"
 
 js-sys = { version = "0.3.63" }
@@ -44,10 +46,6 @@ web-sys = { version = "0.3.60", features = [
     "StorageType",
     "Window"
 ] }
-
-async-mutex = "1.4.0"
-
-getrandom = { version = "0.2.8", features = ["js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -65,6 +63,5 @@ wee_alloc = { version = "0.4.5", optional = true }
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
 
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+meta-secret-core = { path = "../core" }
