--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -31,6 +31,7 @@ serde_derive.workspace = true
 
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
+tracing-attributes = "0.1.27"
 
 ed25519-dalek.workspace = true
 crypto_box.workspace = true
