--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -49,6 +49,7 @@ serde-big-array = "0.4"
 qrcode-generator = "4.1.6"
 rqrr = "0.5"
 image = "0.24"
+rand = { version = "0.8.5", features = [] }
 
 [dependencies.uuid]
 version = "1.3.0"
