--- a/core-swift-lib/Cargo.toml
+++ b/core-swift-lib/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "lib", "staticlib"]
+crate-type = ["dylib"]
 name = "meta_secret_core_swift"
 
 [dependencies]
