--- a/core-jni-lib/Cargo.toml
+++ b/core-jni-lib/Cargo.toml
@@ -19,6 +19,7 @@ tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
 tracing-attributes = "0.1.27"
 thiserror.workspace = true
 anyhow.workspace = true
+tokio = {  version = "1.33.0", features = ["full"] }
 
 
 [build-dependencies]
