--- a/web-cli/ui/package.json
+++ b/web-cli/ui/package.json
@@ -2,7 +2,7 @@
   "name": "meta-secret-ui-vue",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
@@ -13,47 +13,47 @@
     "postbuild": "cp dist/index.html dist/404.html"
   },
   "dependencies": {
-    "@headlessui/vue": "~1.7.7",
+    "@headlessui/vue": "1.7.22",
     "@heroicons/vue": "1.0.6",
-    "idb": "^7.1.1",
+    "idb": "7.1.1",
     "meta-secret-web-cli": "file:./pkg",
-    "pinia": "~2.1.6",
-    "qr-code-styling": "~1.6.0-rc.1",
-    "serve": "~14.2.0",
-    "vite-plugin-wasm": "~3.2.2",
-    "vue": "~3.3.4",
-    "vue-github-button": "~3.1.0",
-    "vue-router": "~4.2.4",
-    "wasm-pack": "~0.12.1"
+    "pinia": "2.2.2",
+    "qr-code-styling": "1.6.0-rc.1",
+    "serve": "14.2.3",
+    "vite-plugin-wasm": "3.3.0",
+    "vue": "3.5.0",
+    "vue-github-button": "3.1.0",
+    "vue-router": "4.4.3",
+    "wasm-pack": "0.13.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "~1.10.4",
-    "@types/jsdom": "~21.1.1",
-    "@types/node": "~20.4.2",
-    "@vitejs/plugin-vue": "~4.3.4",
-    "@vitejs/plugin-vue-jsx": "~3.0.1",
-    "@vue/eslint-config-prettier": "~8.0.0",
-    "@vue/eslint-config-typescript": "~11.0.3",
-    "@vue/test-utils": "~2.4.1",
-    "@vue/tsconfig": "~0.4.0",
-    "autoprefixer": "~10.4.14",
-    "cypress": "~12.17.1",
-    "eslint": "^8.45.0",
-    "eslint-plugin-cypress": "2.13.3",
-    "eslint-plugin-vue": "^9.15.1",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.26",
-    "prettier": "^3.0.0",
-    "qr-scanner": "~1.4.2",
-    "start-server-and-test": "~2.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.4",
-    "vite-plugin-wasm": "^3.2.2",
-    "vite-plugin-wasm-pack": "^0.1.12",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.6",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "@rushstack/eslint-patch": "1.10.4",
+    "@types/jsdom": "21.1.7",
+    "@types/node": "22.5.3",
+    "@vitejs/plugin-vue": "5.1.3",
+    "@vitejs/plugin-vue-jsx": "4.0.1",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-typescript": "11.0.3",
+    "@vue/test-utils": "2.4.6",
+    "@vue/tsconfig": "0.5.1",
+    "autoprefixer": "10.4.20",
+    "cypress": "13.14.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-cypress": "3.5.0",
+    "eslint-plugin-vue": "9.28.0",
+    "jsdom": "25.0.0",
+    "postcss": "8.4.44",
+    "prettier": "3.3.3",
+    "qr-scanner": "1.4.2",
+    "start-server-and-test": "2.0.5",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4",
+    "vite": "5.4.3",
+    "vite-plugin-wasm": "3.3.0",
+    "vite-plugin-wasm-pack": "0.1.12",
+    "vitest": "0.34.6",
+    "vue-tsc": "2.1.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "5.1.4"
   }
 }
