--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: run tests
         run: |
-          earthly --allow-privileged --ci --remote-cache=ghcr.io/meta-secret/core-cache:latest --push +app-test
+          earthly --allow-privileged --ci +app-test
