--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,12 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: cypherkitty
+          password: ${{ secrets.META_SECRET_GH_PAT }}
+
       - name: run tests
         run: |
-          earthly --allow-privileged --ci +app-test
+          earthly --allow-privileged --ci --remote-cache=ghcr.io/meta-secret/core:cache --push +app-test
