--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ghcr.io
           username: cypherkitty
           password: ${{ secrets.META_SECRET_GH_PAT }}
 
