--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -50,6 +50,8 @@ qrcode-generator = "4.1.6"
 rqrr = "0.5"
 image = "0.24"
 
+wasm-bindgen = "0.2.93"
+
 [dependencies.uuid]
 version = "1.3.0"
 features = [
