--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,35 +16,36 @@ exclude = [
 
 [workspace.dependencies]
 # Error handling
-thiserror = "1.0.49"
-anyhow = "1.0.75"
+thiserror = "1.0.63"
+anyhow = "1.0.89"
 
 # Logging and tracing
-tracing = "0.1"
-tracing-subscriber = { version = "0.3" }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18" }
+tracing-futures = "0.2.5"
 
 # Json
 serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
-serde_derive = "1.0.188"
+serde_json = "1.0.128"
+serde_derive = "1.0.210"
 
 # Async utils
-async-std = { version = "1.12.0" }
-async-trait = "0.1"
-flume = "0.11"
-async-mutex = "1.4"
+async-std = { version = "1.13.0" }
+async-trait = "0.1.82"
+flume = "0.11.0"
+async-mutex = "1.4.0"
 
 # Cryptography
 ed25519-dalek = "1.0.1"
 crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
-getrandom = { version = "0.2.8", features = ["js"] }
-sha2 = { version = "0.10.6", features = ["oid"] }
+getrandom = { version = "0.2.15", features = ["js"] }
+sha2 = { version = "0.10.8", features = ["oid"] }
 base64 = "0.20.0"
-hex = "0.4"
+hex = "0.4.3"
 #https://github.com/dsprenkels/sss-rs
-shamirsecretsharing = "0.1"
+shamirsecretsharing = "0.1.5"
 
 # Sql
-diesel = { version = "2.0.0" }
-diesel_migrations = { version = "2.0.0" }
+diesel = { version = "2.2.4" }
+diesel_migrations = { version = "2.2.0" }
