--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -35,6 +35,7 @@ serde_derive.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
 tracing-attributes = "0.1.27"
+tracing-futures.workspace = true
 
 ed25519-dalek.workspace = true
 crypto_box.workspace = true
