--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ async-mutex = "1.4.0"
 
 # Cryptography
 ed25519-dalek = "1.0.1"
-crypto_box = { version = "0.8.2", features = ["std"] }
+crypto_box = { version = "0.9.1", features = ["std", "chacha20"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.15", features = ["js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
