--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,27 +16,28 @@ exclude = [
 
 [workspace.dependencies]
 # Error handling
-thiserror = "1.0.63"
-anyhow = "1.0.89"
+thiserror = "2.0.3"
+anyhow = "1.0.93"
 
 # Logging and tracing
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18" }
 
 # Json
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.128"
-serde_derive = "1.0.210"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+serde_derive = "1.0.215"
+serde_yaml = "0.9.33"
 
 # Async utils
 async-std = { version = "1.13.0" }
-async-trait = "0.1.82"
-flume = "0.11.0"
+async-trait = "0.1.83"
+flume = "0.11.1"
 async-mutex = "1.4.0"
 
 # Cryptography
-ed25519-dalek = "1.0.1"
-crypto_box = { version = "0.9.1", features = ["std", "chacha20"] }
+ed25519-dalek = "2.1.1"
+crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.15", features = ["js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
