--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,11 +4,15 @@ version = "1.1.0"
 edition = "2021"
 
 [dependencies]
-meta-secret-core = "1.2.6"
-clap = { version = "3.2", features = ["derive"] }
-anyhow = "1.0"
-thiserror = "1.0.33"
+meta-secret-core = { path = "../core" }
 
-serde = "1.0"
-serde_json = "1.0"
-serde_yaml = "0.9"
+thiserror.workspace = true
+anyhow.workspace = true
+
+clap = { version = "3.2", features = ["derive"] }
+
+
+serde.workspace = true
+serde_json.workspace = true
+serde_derive.workspace = true
+serde_yaml.workspace = true
