--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -38,7 +38,6 @@ async-mutex = "1.4.0"
 
 # Cryptography
 ed25519-dalek = "2.1.1"
-crypto_box = { version = "0.8.2", features = ["std"] }
 rand = "0.8.5"
 getrandom = { version = "0.2.15", features = ["js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
@@ -46,6 +45,7 @@ base64 = "0.20.0"
 hex = "0.4.3"
 #https://github.com/dsprenkels/sss-rs
 shamirsecretsharing = "0.1.5"
+age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "cli-common"] }
 
 # Networking
 axum = "0.7.9"
