--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -45,7 +45,7 @@ base64 = "0.20.0"
 hex = "0.4.3"
 #https://github.com/dsprenkels/sss-rs
 shamirsecretsharing = "0.1.5"
-age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "cli-common"] }
+age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "async", "web-sys"] }
 
 # Networking
 axum = "0.7.9"
