--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -17,17 +17,18 @@ exclude = [
 
 [workspace.dependencies]
 # Error handling
-thiserror = "2.0.6"
-anyhow = "1.0.93"
+thiserror = "2.0.9"
+anyhow = "1.0.95"
 
 # Logging and tracing
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18" }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19" }
+tracing-attributes = "0.1.28"
 
 # Json
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
-serde_derive = "1.0.215"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.134"
+serde_derive = "1.0.217"
 serde_yaml = "0.9.33"
 
 # Async utils
@@ -41,7 +42,7 @@ ed25519-dalek = "2.1.1"
 rand = "0.8.5"
 getrandom = { version = "0.2.15", features = ["js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
-base64 = "0.20.0"
+base64 = "0.22.1"
 hex = "0.4.3"
 #https://github.com/dsprenkels/sss-rs
 shamirsecretsharing = "0.1.5"
@@ -55,5 +56,5 @@ tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 http = "1.2.0"
 
 # Sql
-diesel = { version = "2.2.4" }
+diesel = { version = "2.2.6" }
 diesel_migrations = { version = "2.2.0" }
