--- a/meta-secret/core/Cargo.toml
+++ b/meta-secret/core/Cargo.toml
@@ -34,12 +34,11 @@ serde_derive.workspace = true
 
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
-tracing-attributes = "0.1.27"
+tracing-attributes.workspace = true
 
 
 ed25519-dalek.workspace = true
 rand.workspace = true
-getrandom.workspace = true
 sha2.workspace = true
 base64.workspace = true
 hex.workspace = true
@@ -47,14 +46,13 @@ hex.workspace = true
 shamirsecretsharing.workspace = true
 age.workspace = true
 
-serde_bytes = "0.11"
-serde-big-array = "0.4"
+serde-big-array = "0.5.1"
 
-qrcode-generator = "4.1.6"
-rqrr = "0.5"
-image = "0.24"
+qrcode-generator = "4.1.9"
+rqrr = "0.6.0"
+image = "0.24.9"
 
-wasm-bindgen = "0.2.93"
+wasm-bindgen = "0.2.99"
 log = "0.4.22"
 
 [dependencies.uuid]
@@ -67,4 +65,3 @@ features = [
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
-pretty_assertions = "1"
