--- a/meta-secret/core/Cargo.toml
+++ b/meta-secret/core/Cargo.toml
@@ -23,6 +23,8 @@ target = "x86_64-unknown-linux-gnu"
 thiserror.workspace = true
 anyhow.workspace = true
 
+derive_more.workspace = true
+
 async-trait.workspace = true
 flume.workspace = true
 async-mutex.workspace = true
