--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -52,6 +52,7 @@ web-sys = { version = "0.3.70", features = [
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+async-std = "1.13.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.43"
