--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: "Docker Automation"
+name: "Docker"
 
 on:
   workflow_dispatch:
@@ -36,10 +36,11 @@ jobs:
           password: ${{ secrets.META_SECRET_GH_PAT }}
 
       - name: run tests
+        working-directory: ./meta-secret
         run: |
           earthly \
             --allow-privileged \
             --ci \
             --remote-cache=ghcr.io/meta-secret/core:cache \
             --push \
-            ./meta-secret+build-meta-server-image
+            +build-meta-server-image
