--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -17,10 +17,10 @@ exclude = [
 
 [workspace.dependencies]
 # Error handling
-thiserror = "2.0.9"
-anyhow = "1.0.95"
+thiserror = "2.0.12"
+anyhow = "1.0.97"
 
-derive_more = { version = "1.0.0", features = ["full"] }
+derive_more = { version = "2.0.1", features = ["full"] }
 
 # Logging and tracing
 tracing = "0.1.41"
@@ -28,21 +28,21 @@ tracing-subscriber = { version = "0.3.19" }
 tracing-attributes = "0.1.28"
 
 # Json
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.134"
-serde_derive = "1.0.217"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+serde_derive = "1.0.219"
 serde_yaml = "0.9.33"
 
 # Async utils
 async-std = { version = "1.13.0" }
-async-trait = "0.1.83"
+async-trait = "0.1.87"
 flume = "0.11.1"
 async-mutex = "1.4.0"
 
 # Cryptography
 ed25519-dalek = "2.1.1"
 rand = "0.8.5"
-getrandom = { version = "0.2.15", features = ["js"] }
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
 base64 = "0.22.1"
 hex = "0.4.3"
@@ -51,12 +51,12 @@ shamirsecretsharing = "0.1.5"
 age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "async", "web-sys"] }
 
 # Networking
-axum = "0.7.9"
+axum = "0.8.1"
 reqwest = "0.12.9"
-tokio = { version = "1.42.0", features = ["full"] }
+tokio = { version = "1.44.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
-http = "1.2.0"
+http = "1.3.1"
 
 # Sql
-diesel = { version = "2.2.6" }
+diesel = { version = "2.2.8" }
 diesel_migrations = { version = "2.2.0" }
