--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,6 +41,6 @@ jobs:
           earthly \
             --allow-privileged \
             --ci \
-            --remote-cache=ghcr.io/meta-secret/core:cache \
+            --remote-cache=ghcr.io/meta-secret/meta-secret-core:cache \
             --push \
             +build-meta-server-image
