- migrate to rust 1.84.1 - update dependencies and fix wasm build process

--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -23,6 +23,9 @@ tracing-subscriber = { workspace = true, default-features = false, features = ["
 
 getrandom.workspace = true
 
+# Add explicit uuid dependency for wasm
+uuid.workspace = true
+
 # Wasm dependencies
 tracing-web = "0.1.3"
 
