--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -49,6 +49,7 @@ hex = "0.4.3"
 #https://github.com/dsprenkels/sss-rs
 shamirsecretsharing = "0.1.5"
 age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "async", "web-sys"] }
+uuid = { version = "1.3.0", features = ["v4", "js"] }
 
 # Networking
 axum = "0.8.1"
