--- a/meta-secret/core/Cargo.toml
+++ b/meta-secret/core/Cargo.toml
@@ -38,7 +38,6 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
 tracing-attributes.workspace = true
 
-
 ed25519-dalek.workspace = true
 rand.workspace = true
 sha2.workspace = true
@@ -55,16 +54,10 @@ rqrr = "0.8.0"
 image = "0.25.5"
 
 wasm-bindgen = "0.2.99"
-log = "0.4.22"
+log = "0.4.26"
 
-[dependencies.uuid]
-version = "1.3.0"
-features = [
-    "v4", # Lets you generate random UUIDs
-    "fast-rng", # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
+uuid.workspace = true
 
 [dev-dependencies]
-tokio = { version = "1.20.1", features = ["full"] }
-tempfile = "3.10.1"
+tokio = { version = "1.44.0", features = ["full"] }
+tempfile = "3.18.0"
