--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -21,7 +21,7 @@ RUN rustup target add x86_64-unknown-linux-gnu
 # Sccache (cargo is too slow)
 #RUN cargo install sccache@0.8.1
 ENV RUSTC_WRAPPER=sccache
-SCCACHE_VERSION="v0.9.0"
+ENV SCCACHE_VERSION="v0.9.0"
 RUN wget https://github.com/mozilla/sccache/releases/download/${SCCACHE_VERSION}/sccache-${SCCACHE_VERSION}-x86_64-unknown-linux-musl.tar.gz \
         && tar xzf sccache-${SCCACHE_VERSION}-x86_64-unknown-linux-musl.tar.gz \
         && mv sccache-${SCCACHE_VERSION}-x86_64-unknown-linux-musl/sccache /usr/local/bin/sccache \
