--- a/meta-secret/wasm/Cargo.toml
+++ b/meta-secret/wasm/Cargo.toml
@@ -19,7 +19,7 @@ async-trait.workspace = true
 serde.workspace = true
 
 tracing.workspace = true
-tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "time"] }
+tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }
 
 getrandom.workspace = true
 
