--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -37,8 +37,8 @@ async-mutex = "1.4.0"
 
 # Cryptography
 ed25519-dalek = "2.1.1"
-rand = "0.8.5"
-getrandom = { version = "0.2.15", features = ["js"] }
+rand = "0.9.0"
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 sha2 = { version = "0.10.8", features = ["oid"] }
 base64 = "0.22.1"
 hex = "0.4.3"
