Project Architecture changes:  - extract meta-server, meta-tests crates  - extract fixtures and setup proper dependencies relationship  - move server_app it test into the meta-tests crate

--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -5,10 +5,12 @@ resolver = "2"
 members = [
     "core",
     "meta-server-emulator",
-    "meta-server",
+    "meta-server/server-node",
+    "meta-server/web-server",
     "core-swift-lib",
     "wasm",
-    "cli"
+    "cli",
+    "tests"
 ]
 
 [workspace.dependencies]
