--- a/meta-secret/core/Cargo.toml
+++ b/meta-secret/core/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/meta-secret/meta-secret-core"
 readme = "README.md"
 
 [features]
-test_utils = []
+test-framework = []
 
 [lib]
 crate-type = ["cdylib", "lib", "staticlib"]
@@ -62,3 +62,4 @@ uuid.workspace = true
 [dev-dependencies]
 tokio = { version = "1.44.0", features = ["full"] }
 tempfile = "3.18.0"
+meta-server-node = { path = "../meta-server/server-node" }
