--- a/meta-secret/meta-server/web-server/Cargo.toml
+++ b/meta-secret/meta-server/web-server/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 meta-secret-core = { path = "../../core" }
+meta-server-node = { path = "../server-node" }
 
 thiserror.workspace = true
 anyhow.workspace = true
