Project architecture: create meta-db crate, move sqlite into the crate

--- a/meta-secret/db/sqlite/Cargo.toml
+++ b/meta-secret/db/sqlite/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "meta-server-emulator"
+name = "meta-db-sqlite"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-meta-secret-core = { path = "../core" }
+meta-secret-core = { path = "../../core" }
 
 thiserror.workspace = true
 anyhow.workspace = true
