--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 members = [
     "core",
-    "meta-server-emulator",
+    "db/sqlite",
     "meta-server/server-node",
     "meta-server/web-server",
     "core-swift-lib",
