--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,9 +31,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
           username: cypherkitty
-          password: ${{ secrets.META_SECRET_GH_PAT }}
+          password: ${{ secrets.META_SECRET_SERVER_DOCKER_PAT }}
 
       - name: build web component
         working-directory: ./meta-secret
