--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
           username: cypherkitty
-          password: ${{ secrets.META_SECRET_GH_PAT }}
+          password: ${{ secrets.META_SECRET_SERVER_DOCKER_PAT }}
 
       - name: run tests
         working-directory: ./meta-secret
