Fix meta-server to run server_app in a separate thread pool. Also fix db name accordingly in migration scripts

--- a/meta-secret/db/sqlite/Makefile
+++ b/meta-secret/db/sqlite/Makefile
@@ -1,4 +1,4 @@
 
 schema_migration:
 	rm -rf /tmp/test.db
-	diesel migration --database-url="file:///tmp/test.db" run
+	diesel migration --database-url="file:///tmp/meta-secret.db" run
