--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -10,8 +10,9 @@ members = [
     "core-swift-lib",
     "wasm",
     "cli",
-    "tests"
-, "mobile"]
+    "tests",
+    "mobile"
+]
 
 [workspace.dependencies]
 # Error handling
