Start developing meta-cli

--- a/meta-secret/Cargo.toml
+++ b/meta-secret/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "meta-server/web-server",
     "wasm",
     "cli",
+    "meta-cli",
     "tests",
     "mobile/core-swift-lib",
     "mobile/ios"
